--- a/WEBSITE/Stlying/Mystlying.css
+++ b/WEBSITE/Stlying/Mystlying.css
@@ -1,35 +1,6 @@
-.ABC {
-    text-align: center;
-}
-
-#RedP {
-    color: red;
-}
-
-#YellowB {
-    background-color: yellow;
-}
-
-#YellowBB {
-    background-color: yellow; color: blue;
-}
-
-#Yellow {
-    background-color: yellow;
-}
-
-.AAA {
-    text-align: center;
-}
-
-#ABB {
-    text-align: center;
-}
-
-#Haha {
+p {
     font-size: 90px;
-} 
-
+}
 a:hover {
     background-color: whitesmoke;
 }
@@ -37,7 +8,9 @@ a:hover {
 nav {
     position: fixed;
     top: 0px;
+    left: 0px;
     width: 100%;
+    background-color: black;
 }
 
 li {
@@ -46,5 +19,5 @@ li {
 }
 
 ul {
-    background-color: gray;
+    
 }
