--- a/WEBSITE/Stlying/Mystlying.css
+++ b/WEBSITE/Stlying/Mystlying.css
@@ -33,3 +33,35 @@ p {
 .navbar li a:hover {
     color: black;
 }
+
+/* Contact page*/
+
+.content {
+    width: 100%;
+}
+.nav {
+    height: 48px;
+    background-color: grey;
+}
+.header {
+    width: 1246px;
+    height: 50px;
+    background-color: yellow;
+    margin: auto;
+}
+.header h1 {
+    font-size: 22px;
+    line-height: 48px;
+    font-weight: 100;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    float: right;
+}
+.header ul {
+    float: left;
+
+}
+.header ul li {
+    float: left;
+    line-height: 48px;
+    padding-left: 36px;
+}
