--- a/WEBSITE/Stlying/Mystlying.css
+++ b/WEBSITE/Stlying/Mystlying.css
@@ -1,67 +1,54 @@
-/* Home page*/
-
+/* ALL NAVIGATION BARS*/
+body {
+    background-color: blue;
+}
 p {
     font-size: 90px;
 }
-
-.navbar {
+.header {
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
     height: 40px;
-    background-color:gray;
+    background-color: black;
 }
-
-
-.navbar ul {
+.header h1 {
+    float: left;
+    font-size: 32px;
+    font-weight: 100;
+    position: relative;
+    margin: 0px;
+    padding-left: 5px; 
+    top: 0px;
+    font-style: initial;
+    font-family: monospace;
+    color: ivory;
+}
+.header ul {
     width: auto;
+    text-align: center;
+    position: relative;
+    margin: 8px;
 }
-
-
-.navbar li {
+.header ul li {
     display: inline;
     margin-right: 2%;
     position: relative;
-
 }
-
-.navbar li a {
-    color:white;
+.header ul li a {
+    text-decoration-line: none;
+    font-size: 18px;
+    font-family: fantasy;
+    color:whitesmoke;
 }
-
-.navbar li a:hover {
-    color: black;
+.header ul li a:hover {
+    color: brown;
 }
-
-/* Contact page*/
-
-.content {
-    width: 100%;
-}
-.nav {
-    height: 48px;
-    background-color: grey;
-}
-.header {
-    width: 1246px;
-    height: 50px;
-    background-color: yellow;
-    margin: auto;
-}
-.header h1 {
-    font-size: 22px;
-    line-height: 48px;
-    font-weight: 100;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.header .dropdown {
     float: right;
 }
-.header ul {
-    float: left;
-
+.header .dropdown .dropdown-content {
+    display: none;
 }
-.header ul li {
-    float: left;
-    line-height: 48px;
-    padding-left: 36px;
-}
+/* Contact page*/
