--- a/WEBSITE/Stlying/Mystlying.css
+++ b/WEBSITE/Stlying/Mystlying.css
@@ -53,6 +53,13 @@ body {
 */
 
 /* Home page */
-p {
-    font-size: 90px;
+.titles {
+    font-size: 30px;
+    font-weight: bold;
+    font-style: initial;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+}
+.sentences {
+    font-size: 40px;
 }
