--- a/WEBSITE/Stlying/Mystlying.css
+++ b/WEBSITE/Stlying/Mystlying.css
@@ -1,17 +1,18 @@
 /* ALL NAVIGATION BARS*/
 body {
-    background-color: burlywood;
+    padding: 0%;
+    margin: 0%;
 }
 .header {
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 40px;
+    height: 65px;
     background-color: black;
 }
 .header h1 {
-    float: left;
+    text-align: left;
     font-size: 32px;
     font-weight: 100;
     position: relative;
@@ -46,27 +47,43 @@ body {
 .header .dropdown {
     float: right;
 }
-/*
-.header .dropdown .dropdown-content {
-    display: none;
-}
-*/
+
 
 /* Home page */
-.titles {
-    font-size: 30px;
-    font-weight: bold;
-    font-style: initial;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-align: center;
+.banner-area {
+    width: 100%;
+    height: 500px;
+    position: fixed;
+    top: 65px;
+    background-image: url(../Images/Pic1.jpg);
+    background-size: cover;
+    background-position: center center;
 }
-.first {
-    padding-top: 40px;
+.banner-area h2 {
+    padding-top: 10%;
+    font-size: 70px;
+    font-family: poppins;
+    text-transform: uppercase;
+    color: lightyellow;
 }
-.sentences {
+.content-area {
+    width: 100%;
+    position: absolute;
+    top: 550px;
+    background-color: #ddd;
+    height: 1500px;
+}
+.content-area h2 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    letter-spacing: 4px;
+    padding-top: 30px;
     font-size: 40px;
-    display: flex;
-    text-align: justify;
+    margin: 0;
+}
+.content-area p {
+    padding: 2% 0;
+    font-family: monospace;
+    line-height: 30px;
 }
 
 /* About page */
@@ -79,9 +96,7 @@ body {
 h2 {
     text-align: center;
 }
-.aboutmepic {
 
-}
 /* Product page */
 img {
     width: 300px;
