--- a/WEBSITE/Stlying/EnglishVersion/HomeEn.css
+++ b/WEBSITE/Stlying/EnglishVersion/HomeEn.css
@@ -1,3 +1,18 @@
+@media screen and (max-width: 500px) {
+    .wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    nav {
+        flex-direction: column;
+        display: flex;
+        
+    }
+}
+
 * {
     padding: 0%;
     margin: 0%;
