--- a/WEBSITE/Stlying/EnglishVersion/HomeEn.css
+++ b/WEBSITE/Stlying/EnglishVersion/HomeEn.css
@@ -1,18 +1,3 @@
-@media screen and (max-width: 500px) {
-    .wrapper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    nav {
-        flex-direction: column;
-        display: flex;
-        
-    }
-}
-
 * {
     padding: 0%;
     margin: 0%;
@@ -33,6 +18,7 @@ header {
     width: 100%;
     background-color: lightslategrey;
 }
+
 .logo {
     line-height: 70px;
 }
@@ -44,7 +30,7 @@ header {
 }
 .wrapper a {
     text-decoration: none;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     letter-spacing: 4px;
     font-size: 20px;
     margin: 0 10px;
@@ -75,7 +61,7 @@ header {
     height: 1500px;
 }
 .content-area0 h2 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     letter-spacing: 4px;
     padding-top: 30px;
     font-size: 40px;
@@ -85,4 +71,26 @@ header {
     padding: 2% 0;
     font-family: monospace;
     line-height: 30px;
+}
+
+@media screen and (max-width: 500px) {
+    .wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    nav {
+        flex-direction: column;
+        display: flex;
+    }
+    header {
+        width: 20%;
+        background-color: red;
+    }
+    .banner-area {
+        left: 70px;
+        top: 0px;
+    }
 }
