--- a/WEBSITE/Stlying/MyCssCode.css
+++ b/WEBSITE/Stlying/MyCssCode.css
@@ -49,7 +49,7 @@ header {
     height: 500px;
     position: fixed;
     top: 70px;
-    background-image: url("https://media.istockphoto.com/photos/abstract-wavy…=0&h=b626WM5c-lq9g_yGyD0vgufb4LQRX9UgYNWPaNUVses=");
+    background-image: url(../Images/Home/2.png);
     background-size: cover;
     background-position: center center;
     z-index: 0;
